--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
+#Application
 APP_SECRET=
+APP_API_URL=http://locahost:3333
 APP_WEB_URL=http://locahost:3000
+
+#Mail
+MAIL_DRIVER=ethereal
+
+# AWS Credewntials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
