--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^8.3.9",
+    "aws-sdk": "^2.686.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
+    "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
